--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= flash_block %>
+    <%= render 'shared/header' %>
+    <div class="container pt-5">
+      <%= yield %>
+    </div>
   </body>
 </html>
