add: Implement story "Only the author can edit his answer" + tests, refactor

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,4 +1,14 @@
-li
+li id="answer_#{answer.id}"
   = answer.body.html_safe
   - if answer.author == current_user
     = button_to 'Remove', question_answer_path(@question, answer), method: :delete, class: 'btn btn-danger remove_answer_btn'
+    = button_to 'Edit', '#', class: 'btn btn-primary edit_answer_btn', data: { answer_id: answer.id }
+    = form_with model: [@question, answer], method: :patch, local: false, class: 'edit_form d-none', html: { id: "edit-answer-form-#{answer.id}" } do |f|
+      div.answer_errors
+        = render 'shared/errors', resource: answer
+      div.mb-2
+        = f.label :body, 'Body', class: 'form-label'
+        = f.text_area :body, id: :answer_body, rows: 10, class: 'form-control'
+
+      = f.submit 'Save', class: 'btn btn-success me-2'
+
