--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -1,7 +1,7 @@
 @import "bootstrap/scss/functions";
 @import "bootstrap/scss/_variables.scss";
 
-.edit_question_form {
+.edit_form {
   margin-top: 10px;
   border-radius: 6px;
   padding: 30px;
