--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -3,7 +3,7 @@ li id="question_#{question.id}"
   - if question.author == current_user
     = button_to 'Remove', question_path(question), method: :delete, class: 'btn btn-danger remove_question_btn'
     = link_to 'Edit', '#', class: 'btn btn-primary edit_question_btn', data: { question_id: question.id }
-    = form_with model: question, method: :patch, local: false, class: 'edit_question_form d-none', html: { id: "edit-question-form-#{question.id}" } do |f|
+    = form_with model: question, method: :patch, local: false, class: 'edit_form d-none', html: { id: "edit-question-form-#{question.id}" } do |f|
       div.question_errors
         = render 'shared/errors', resource: question
       div.mb-2
