--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -4,7 +4,8 @@
 <% end%>
 
 <% if @answer.persisted? %>
+  $('.no-answers').remove();
   $('.answers').append('<%= j render @answer %>');
-  $('#answer_body').val('');
+  $('.answer-new #answer_body').val('');
   $('body').append('<div class="alert alert-success mb-0">Answer has been created successfully.</div>');
 <% end %>
