add: implement story "Questioner can choose the best answer for their question, change the best answer. The best answer is displayed first in the list of answers" + tests

--- a/app/assets/stylesheets/alerts.scss
+++ b/app/assets/stylesheets/alerts.scss
@@ -1,8 +1,12 @@
-.alert {
+.alerts {
   position: fixed;
   top: 10px;
   right: 10px;
   width: 100%;
   max-width: 350px;
   z-index: 1000;
+}
+
+.alert {
+  margin-bottom: 5px;
 }
