--- a/app/views/answers/update.js.erb
+++ b/app/views/answers/update.js.erb
@@ -1,7 +1,7 @@
 <% if @answer.errors.present? %>
-  $('.answer_errors').html('<%= render 'shared/errors', resource: @answer %>');
-  $('#answer_body').addClass('error');
+  $('#answer_<%= @answer.id %> .answer-errors').html('<%= render 'shared/errors', resource: @answer %>');
+  $('#answer_<%= @answer.id %> #answer_body').addClass('error');
 <% else %>
   $('#answer_<%= @answer.id %>').replaceWith('<%= j render @answer %>');
-  $('body').append('<div class="alert alert-success mb-0">Answer has been edited successfully.</div>');
+  addAlert('Answer has been edited successfully.', 'success');
 <% end %>
