--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -3,8 +3,9 @@ li id="question_#{question.id}"
   - if question.author == current_user
     = button_to 'Remove', question_path(question), method: :delete, class: 'btn btn-danger remove_question_btn'
     = link_to 'Edit', '#', class: 'btn btn-primary edit_question_btn', data: { question_id: question.id }
+
     = form_with model: question, method: :patch, local: false, class: 'edit_form d-none', html: { id: "edit-question-form-#{question.id}" } do |f|
-      div.question_errors
+      div.question-errors
         = render 'shared/errors', resource: question
       div.mb-2
         = f.label :title, 'Title', class: 'form-label'
@@ -12,4 +13,5 @@ li id="question_#{question.id}"
       div.mb-3
         = f.label :body, 'Body', class: 'form-label'
         = f.text_area :body, id: :question_body, rows: 10, class: 'form-control'
-      = f.submit 'Save', class: 'btn btn-success'
+      = f.submit 'Save', class: 'btn btn-success me-2'
+      = link_to 'Cancel', '#', class: 'btn btn-secondary cancel-edit-question', data: { question_id: question.id }
