--- a/app/views/questions/update.js.erb
+++ b/app/views/questions/update.js.erb
@@ -1,13 +1,14 @@
 <% if @question.errors.present? %>
-  $('.question_errors').html('<%= render 'shared/errors', resource: @question %>');
+  $('#question_<%= @question.id %> .question-errors').html('<%= render 'shared/errors', resource: @question %>');
 
-  $('#question_title').removeClass('error');
-  $('#question_body').removeClass('error');
+  $('#question_<%= @question.id %> #question_title').removeClass('error');
+  $('#question_<%= @question.id %> #question_body').removeClass('error');
 
   <% @question.errors.each do |error| %>
-    $('#question_<%= error.attribute %>').addClass('error');
+    $('#question_<%= @question.id %> #question_<%= error.attribute %>').addClass('error');
   <% end %>
 <% else %>
   $('#question_<%= @question.id %>').replaceWith('<%= j render @question %>');
-  $('body').append('<div class="alert alert-success mb-0">Question has been edited successfully.</div>');
+
+  addAlert('Question has been edited successfully.', 'success');
 <% end %>
