--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -8,9 +8,13 @@ h1 Create question
     = f.label :title, 'Title', class: 'form-label'
     = f.text_field :title, id: :question_title, class: 'form-control'
 
-  div.mb-5
+  div.mb-3
     = f.label :body, 'Body', class: 'form-label'
     = f.text_area :body, id: :question_body, rows: 10, class: 'form-control'
+
+  div.mb-5
+    = f.label :files, 'File(s)', class: 'form-label'
+    = f.file_field :files, id: :question_files, class: 'form-control form-control-sm', multiple: true
 
   = f.submit 'Ask', class: 'btn btn-primary me-2'
   = link_to 'Back to questions', questions_path, class: 'btn btn-outline-secondary'
