--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -9,6 +9,10 @@ div.question
     div.fw-bold Body
     = @question.body.html_safe
 
+  - if @question.files.attached?
+    - @question.files.each do |file|
+      p= link_to file.filename.to_s, url_for(file)
+
 div.mb3
   div.fw-bold Answers
   ul.answers.mb-3
