Implement story "Question author can delete any of the files attached to their question"

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,3 +21,5 @@
 @import "./layout.scss";
 @import "./form.scss";
 @import "./answers.scss";
+@import "./file-upload.scss";
+@import "./common.scss";
