--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -1,6 +1,6 @@
 h1 Create question
 
-= form_with model: @question do |f|
+= form_with model: @question, html: { id: "new-question-form" } do |f|
   div.question-errors
     = render 'shared/errors', resource: @question
 
@@ -13,8 +13,14 @@ h1 Create question
     = f.text_area :body, id: :question_body, rows: 10, class: 'form-control'
 
   div.mb-5
-    = f.label :files, 'File(s)', class: 'form-label'
-    = f.file_field :files, id: :question_files, class: 'form-control form-control-sm', multiple: true
+    label for="question_files"
+      = content_tag "a", "+ Add more files", class: "btn btn-primary text-light", role: 'button'
+
+    = f.file_field :files, id: "question_files", class: 'form-control form-control-sm question_files d-none', multiple: true
+
+    p id="files-area"
+      span id="filesList"
+        span id="files-names"
 
   = f.submit 'Ask', class: 'btn btn-primary me-2'
   = link_to 'Back to questions', questions_path, class: 'btn btn-outline-secondary'
