--- a/app/views/questions/update.js.erb
+++ b/app/views/questions/update.js.erb
@@ -9,6 +9,7 @@
   <% end %>
 <% else %>
   $('#question_<%= @question.id %>').replaceWith('<%= j render @question %>');
+  setHandlerOnChangeQuestionFiles(null, <%= @question.id %>)
 
   addAlert('Question has been edited successfully.', 'success');
 <% end %>
