Implemented file storage via Yandex Cloud and direct download from the client

--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -16,7 +16,7 @@ h1 Create question
     label for="question_files"
       = content_tag "a", "+ Add files", class: "btn btn-primary text-light", role: 'button'
 
-    = f.file_field :files, id: "question_files", class: 'form-control form-control-sm question_files d-none', multiple: true
+    = f.file_field :files, id: "question_files", class: 'form-control form-control-sm question_files d-none', multiple: true, direct_upload: true
 
     p id="files-area"
       span id="filesList"
