--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -32,7 +32,7 @@ li id="answer_#{answer.id}" class=('best' if answer.best)
         label for="answer_files_#{answer.id}"
           = content_tag "a", "+ Add files", class: "btn btn-primary text-light", role: 'button'
 
-        = f.file_field :files, id: "answer_files_#{answer.id}", class: 'form-control form-control-sm answer_files d-none', data: { resource_id: answer.id }, multiple: true
+        = f.file_field :files, id: "answer_files_#{answer.id}", class: 'form-control form-control-sm answer_files d-none', data: { resource_id: answer.id }, multiple: true, direct_upload: true
 
         p id="files-area"
           span id="filesList"
