--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -28,7 +28,7 @@ li id="question_#{question.id}"
         label for="question_files_#{question.id}"
           = content_tag "a", "+ Add files", class: "btn btn-primary text-light", role: 'button'
 
-        = f.file_field :files, id: "question_files_#{question.id}", class: 'form-control form-control-sm question_files d-none', data: { resource_id: question.id }, multiple: true
+        = f.file_field :files, id: "question_files_#{question.id}", class: 'form-control form-control-sm question_files d-none', data: { resource_id: question.id }, multiple: true, direct_upload: true
 
         p id="files-area"
           span id="filesList"
