--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -5,6 +5,5 @@
   margin-top: 10px;
   border-radius: 6px;
   padding: 30px;
-  border: 1px solid $gray-200;
-  background-color: $gray-100;
+  border: 1px dashed $gray-500;
 }
