--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -7,6 +7,11 @@ li id="answer_#{answer.id}" class=('best' if answer.best)
     'Files:
     = render "shared/file_list", resource: answer, is_uploaded_files: false
 
+  div.mb-3
+    - if answer.links.present?
+      div.mb-3
+        = render "shared/links", links: answer.links
+
   - if answer.author == current_user
     = button_to 'Remove', question_answer_path(@question, answer), remote: true, method: :delete, class: 'btn btn-danger remove_answer_btn'
     = button_to 'Edit', '#', class: 'btn btn-primary edit_answer_btn', data: { answer_id: answer.id }
@@ -18,15 +23,15 @@ li id="answer_#{answer.id}" class=('best' if answer.best)
     = form_with model: [@question, answer], method: :patch, local: false, class: 'edit_form d-none', html: { id: "edit-answer-form-#{answer.id}" } do |f|
       div.answer-errors
         = render 'shared/errors', resource: answer
-      div.mb-2
+      div.mb-3
         = f.label :body, 'Body', class: 'form-label'
         = f.text_area :body, id: :answer_body, rows: 10, class: 'form-control'
 
       div.mb-3
-        div.mb2
-          'Uploaded files:
-          = render "shared/file_list", resource: answer, is_uploaded_files: true
+        'Uploaded files:
+        = render "shared/file_list", resource: answer, is_uploaded_files: true
 
+      div.mb-3
         = f.text_field :file_list_for_delete, class: 'file-list-for-delete d-none'
 
         label for="answer_files_#{answer.id}"
