--- a/app/assets/stylesheets/resource-link.scss
+++ b/app/assets/stylesheets/resource-link.scss
@@ -36,3 +36,38 @@
     border: 1px solid $gray-200;
   }
 }
+
+li.gist-link {
+  width: 100%;
+  position: relative;
+  border-radius: 3px;
+  padding: 10px;
+  border: 1px solid $gray-500;
+
+  & .gist-author {
+    line-height: 1;
+    font-size: 10px;
+    width: fit-content;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    border-radius: 3px;
+    padding: 5px;
+    background-color: $blue-500;
+    color: $white;
+  }
+
+  & .gist-content-wrap {
+    overflow-x: auto;
+
+    & .gist-content {
+      font-family: monospace;
+      font-size: 13px;
+      margin-top: 10px;
+      word-wrap: break-word;
+      white-space: pre-wrap;
+      width: max-content;
+    }
+  }
+
+}
