--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -10,7 +10,7 @@ li id="answer_#{answer.id}" class=('best' if answer.best)
   div.mb-3
     - if answer.links.present?
       div.mb-3
-        = render "shared/links", links: answer.links
+        = render "shared/links", links: answer.links, with_matching: true
 
   - if answer.author == current_user
     = button_to 'Remove', question_answer_path(@question, answer), remote: true, method: :delete, class: 'btn btn-danger remove_answer_btn'
@@ -42,6 +42,14 @@ li id="answer_#{answer.id}" class=('best' if answer.best)
         p id="files-area"
           span id="filesList"
             span id="files-names"
+
+        div.mb-2
+          div.mb-1 Links
+          #links.mb-5
+            = f.fields_for :links do |link|
+              = render 'link_fields', f: link
+            .links
+              = link_to_add_association '+ Add link', f, :links, class: 'btn btn-primary'
 
       = f.submit 'Save', class: 'btn btn-success me-2'
       = link_to 'Cancel', '#', class: 'btn btn-secondary cancel-edit-answer', data: { answer_id: answer.id }
