--- a/app/assets/stylesheets/best-answer-reward.scss
+++ b/app/assets/stylesheets/best-answer-reward.scss
@@ -1,3 +1,6 @@
+@import "bootstrap/scss/functions";
+@import "bootstrap/scss/_variables.scss";
+
 .best-answer-reward {
   width: 100%;
   width: 200px;
@@ -5,4 +8,27 @@
   overflow: hidden;
   object-fit: cover;
   border-radius: 6px;
+}
+
+.rewards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+
+  & .reward-card {
+    width: 300px;
+    overflow: hidden;
+    border-radius: 6px;
+    border: 1px solid $gray-200;
+
+    & .reward-card-image {
+      width: 300px;
+      height: 300px;
+      object-fit: cover;
+    }
+
+    & .reward-card-body {
+      padding: 10px;
+    }
+  }
 }
