--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -12,14 +12,14 @@ li id="answer_#{answer.id}" class=('best' if answer.best)
       div.mb-3
         = render "shared/links", links: answer.links, with_matching: true
 
-  - if answer.author == current_user
+  - if current_user&.author_of?(answer)
     = button_to 'Remove', question_answer_path(@question, answer), remote: true, method: :delete, class: 'btn btn-danger remove_answer_btn'
     = button_to 'Edit', '#', class: 'btn btn-primary edit_answer_btn', data: { answer_id: answer.id }
 
-  - if !answer.best && answer.question.author == current_user
+  - if !answer.best && current_user&.author_of?(answer.question)
     = button_to 'Mark at best', mark_answer_as_best_question_answer_path(@question, answer), remote: true, class: 'btn btn-success mark_best_answer'
 
-  - if answer.author == current_user
+  - if current_user&.author_of?(answer)
     = form_with model: [@question, answer], method: :patch, local: false, class: 'edit_form d-none', html: { id: "edit-answer-form-#{answer.id}" } do |f|
       div.answer-errors
         = render 'shared/errors', resource: answer
