--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -10,7 +10,7 @@ li id="question_#{question.id}"
       div.mb-3
         = render "shared/links", links: question.links, with_matching: false
 
-  - if question.author == current_user
+  - if current_user&.author_of?(question)
     = button_to 'Remove', question_path(question), method: :delete, class: 'btn btn-danger remove_question_btn'
     = link_to 'Edit', '#', class: 'btn btn-primary edit_question_btn', data: { resource_id: question.id }
 
