Display result rating for votes, refactor, fix

--- a/app/javascript/templates/vote.hbs
+++ b/app/javascript/templates/vote.hbs
@@ -5,7 +5,7 @@
     <i class="bi bi-hand-thumbs-up"></i>
   </a>
 
-  <a class="btn btn-outline-danger dislike" data-type="json" data-remote="true" rel="nofollow" data-method="patch"
+  <a class="btn btn-outline-danger dislike me-2" data-type="json" data-remote="true" rel="nofollow" data-method="patch"
     href="{{btn_dislike.link}}">
     <i class="bi bi-hand-thumbs-down"></i>
   </a>
@@ -32,7 +32,7 @@
       </div>
     {{/if}}
 
-    <a class="btn btn-outline-primary reset-vote me-2" data-type="json" data-remote="true" rel="nofollow"
+    <a class="btn btn-outline-primary reset-vote" data-type="json" data-remote="true" rel="nofollow"
       data-method="patch" href="{{btn_revote.link}}">
       Revote
     </a>
