--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,7 +1,9 @@
 h1 Question
 
 div.question.mb-5
-  = render 'shared/vote', voteable: @question
+  div.vote-block
+    = render 'shared/votes_sum', voteable: @question
+    = render 'shared/vote', voteable: @question
 
   div.mb-3
     div.fw-bold Title
