--- a/app/javascript/templates/vote.hbs
+++ b/app/javascript/templates/vote.hbs
@@ -1,12 +1,12 @@
 {{#if can_vote}}
 
   <a class="btn btn-outline-success like me-2" data-type="json" data-remote="true" rel="nofollow" data-method="patch"
-    href="{{btn_like.link}}">
+    href="{{btn_like_link}}">
     <i class="bi bi-hand-thumbs-up"></i>
   </a>
 
   <a class="btn btn-outline-danger dislike me-2" data-type="json" data-remote="true" rel="nofollow" data-method="patch"
-    href="{{btn_dislike.link}}">
+    href="{{btn_dislike_link}}">
     <i class="bi bi-hand-thumbs-down"></i>
   </a>
 
@@ -33,7 +33,7 @@
     {{/if}}
 
     <a class="btn btn-outline-primary reset-vote" data-type="json" data-remote="true" rel="nofollow"
-      data-method="patch" href="{{btn_revote.link}}">
+      data-method="patch" href="{{btn_revote_link}}">
       Revote
     </a>
   {{/if}}
