--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,7 @@
 @import "./layout.scss";
 @import "./form.scss";
 @import "./answers.scss";
+@import "./questions.scss";
 @import "./file-upload.scss";
 @import "./common.scss";
 @import "./best-answer-reward";
