Implement story: "The user can add comments to questions/answers, comments should appear for all users who have a page with the same question open."

--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -9,7 +9,7 @@ div.question.mb-5
 
   div.mb-3
     div.fw-bold Body
-    = @question.body.html_safe
+    = @question.body
 
   div.mb-3
     div.fw-bold Files:
@@ -25,6 +25,8 @@ div.question.mb-5
         'Best answer reward
       div= @question.reward.title
       = image_tag url_for(@question.reward.image), class: "best-answer-reward"
+
+  = render 'shared/comments', resource: @question
 
 div.mb-5
   div.mb-2.fw-bold Answers
