--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -4,7 +4,7 @@ li id="answer_#{answer.id}" class='answer' class=('best' if answer.best)
 
   = render 'shared/vote', voteable: answer
 
-  = answer.body.html_safe
+  = answer.body
 
   div.mb-3
     'Files:
@@ -19,7 +19,7 @@ li id="answer_#{answer.id}" class='answer' class=('best' if answer.best)
     = button_to 'Edit', '#', class: 'btn btn-primary edit_answer_btn', data: { answer_id: answer.id }
 
   - if !answer.best && current_user&.author_of?(answer.question)
-    = button_to 'Mark at best', mark_answer_as_best_answer_path(answer), remote: true, class: 'btn btn-success mark_best_answer'
+    = button_to 'Mark at best', mark_answer_as_best_answer_path(answer), remote: true, class: 'btn btn-success mark_best_answe mb-3'
 
   - if current_user&.author_of?(answer)
     = form_with model: answer, method: :patch, local: false, class: 'edit_form d-none', html: { id: "edit-answer-form-#{answer.id}" } do |f|
@@ -55,3 +55,5 @@ li id="answer_#{answer.id}" class='answer' class=('best' if answer.best)
 
       = f.submit 'Save', class: 'btn btn-success me-2'
       = link_to 'Cancel', '#', class: 'btn btn-secondary cancel-edit-answer', data: { answer_id: answer.id }
+
+  = render 'shared/comments', resource: answer
