--- a/app/views/answers/show.html.slim
+++ b/app/views/answers/show.html.slim
@@ -2,6 +2,6 @@ h1 Answer to the question "#{@question.title}"
 
 div.mb-5
   div.fw-bold Answer body
-  = @answer.body.html_safe
+  = @answer.body
 
 = link_to 'Назад к вопросу', question_path(@question), class: 'btn btn-primary'
