--- a/app/views/shared/_comments.html.slim
+++ b/app/views/shared/_comments.html.slim
@@ -1,15 +1,14 @@
-.comments
+.comments.mb-3
+  .fw-bold Comments:
   - if resource.comments.present?
-    .mb-3
-      .fw-bold Comments:
-      - resource.comments.each do |c|
-        .comment
-          div.comment-author.mb-1
-            'Comment by #{c.author.email}
-          div.comment-body.mb-1
-            = c.body
-          div.comment-date
-            'Created: #{c.formatted_creation_date}
+    - resource.comments.each do |c|
+      .comment
+        div.comment-author.mb-1
+          'Comment by #{c.author.email}
+        div.comment-body.mb-1
+          = c.body
+        div.comment-date
+          'Created: #{c.formatted_creation_date}
 
 - if current_user.present?
   = form_with url: "#{polymorphic_url(resource)}/add_comment", method: :patch, local: false, class: "add_comment" do |f|
