--- a/app/views/confirmed_emails/new.html.slim
+++ b/app/views/confirmed_emails/new.html.slim
@@ -6,7 +6,7 @@ h1 Confirm your email
 
   div.mb-3
     = f.label :email, 'Email', class: 'form-label'
-    = f.text_field :email, id: :email, class: 'form-control'
+    = f.text_field :email, class: 'form-control'
 
   = f.hidden_field :provider, value: @provider
   = f.hidden_field :uid, value: @uid
